src/main/java/com/yc/parser/Parser.jj
PARSER_BEGIN(Parser)

package com.yc.parser;

public class Parser {
}

PARSER_END(Parser)

SKIP :
{
    " " | "\t" | "\n" | "\r"
|  < COMMENT : ("/*" (~["*"])* "*" (~["/"] (~["*"])* "*")* "/")>
| < LINE_COMMENT : "//" (~["\n","\r"])* ("\n" | "\r" | "\r\n") >
}

TOKEN :
{
    < A01: "cadeia" >
|   < A02: "caracter" >
|   < A03: "declaracoes" >
|   < A04: "enquanto" >
|   < A05: "false" >
|   < A06: "fimDeclaracoes" >
|   < A07: "fimEnquanto" >
|   < A08: "fimFunc" >
|   < A09: "fimFuncoes" >
|   < A10: "fimPrograma" >
|   < A11: "fimSe" >
|   < A12: "funcoes" >
|   < A13: "imprime" >
|   < A14: "inteiro" >
|   < A15: "logico" >
|   < A16: "pausa" >
|   < A17: "programa" >
|   < A18: "real" >
|   < A19: "retorna" >
|   < A20: "se" >
|   < A21: "senao" >
|   < A22: "tipoFunc" >
|   < A23: "tipoParam" >
|   < A24: "tipoVar" >
|   < A25: "true" >
|   < A26: "vazio" >
|   < B01: "%" >
|   < B02: "(" >
|   < B03: ")" >
|   < B04: "," >
|   < B05: ":" >
|   < B06: ":=" >
|   < B07: ";" >
|   < B08: "?" >
|   < B09: "[" >
|   < B10: "]" >
|   < B11: "{" >
|   < B12: "}" >
|   < B13: "-" >
|   < B14: "*" >
|   < B15: "/" >
|   < B16: "+" >
|   < B17: "!=" | "#" >
|   < B18: "<" >
|   < B19: "<=" >
|   < B20: "==" >
|   < B21: ">" >
|   < B22: ">=" >
|   < C01: "\"" ( ["a"-"z"] | ["0"-"9"] | " " | "$" | "_" | "." )* "\"" >
|   < C02: "'" ["a"-"z"] "'" >
|   < C03: ( ["0"-"9"] )+ >
|   < C04: ( ["0"-"9"] )+ "." ( ["0"-"9"] )+ ( "e" ( ["0"-"9"] )+ | "e" ( "+" | "-" ) ( ["0"-"9"] )+ )? >
|   < C05: (["a"-"z"])(["a"-"z"] | ["0"-"9"])* >
|   < C06: (["a"-"z"])(["a"-"z"] | ["0"-"9"])* >
|   < C07: (["a"-"z"] | "_") (["a"-"z"] | ["0"-"9"] | "_")* >

}

void Input() :
{}
{
    ( Token() )* <EOF>
}

void Token() :
{}
{
    <A01> | <A02> | <A03> | <A04> | <A05> | <A06> | <A07> | <A08> | <A09> | <A10> | <A11> | <A12> | <A13> | <A14> | <A15> | <A16> | <A17> | <A18> | <A19> | <A20> | <A21> | <A22> | <A23> | <A24> | <A25> | <A26>
|   <B01> | <B02> | <B03> | <B04> | <B05> | <B06> | <B07> | <B08> | <B09> | <B10> | <B11> | <B12> | <B13> | <B14> | <B15> | <B16> | <B17> | <B18> | <B19> | <B20> | <B21> | <B22>
|   <C01> | <C02> | <C03> | <C04> | <C05> | <C06> | <C07>
}
